tests/wormhole/sfpi/gold/warn_push.txt
warn.cc: In function 'void pushwithoutpop()':
warn.cc:86:5: error: '__builtin_riscv_sfppushc' was not declared in this scope; did you mean '__builtin_rvtt_wh_sfppushc'?
   86 |     __builtin_riscv_sfppushc();
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
      |     __builtin_rvtt_wh_sfppushc
